...
        app:selectionRequired="true"
        app:layout_constraintTop_toBottomOf="@id/OrganizerEntrantONWaitingListEventTitleCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/OrganizerEntrantOnWaitingListFilterBar_waiting"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Waiting"
            android:textColor="@color/white"
            android:backgroundTint="@color/toggle_button_color"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/OrganizerEntrantOnWaitingListFilterBar_chosen"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Selected"
            android:textColor="@color/white"
            android:backgroundTint="@color/toggle_button_color"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/OrganizerEntrantOnWaitingListFilterBar_cancelled"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancelled"
            android:textColor="@color/white"
            android:backgroundTint="@color/toggle_button_color"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/OrganizerEntrantOnWaitingListFilterBar_final"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Final"
            android:textColor="@color/white"
            android:backgroundTint="@color/toggle_button_color"
            android:textSize="12sp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <ListView
        android:id="@+id/OrganizerEntrantOnWaitingList"
        android:layout_width="340dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/OrganizerEntrantOnWaitingListFilterBar"
        app:layout_constraintBottom_toTopOf="@id/OrganizerEntrantOnWaitingListBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/OrganizerEntrantOnWaitingListBackButton"
        android:layout_width="0dp"
...
        android:text="Go Back"
        android:textSize="@dimen/font_text_size"
        android:backgroundTint="@color/accent_first"
        android:textColor="@color/darkText"
        app:layout_constraintTop_toBottomOf="@id/OrganizerEntrantOnWaitingList"
        app:layout_constraintBottom_toTopOf="@id/nav_bar"
        app:layout_constraintStart_toEndOf="@id/OrganizerEntrantOnWaitingListSelectAllButton"
        app:layout_constraintEnd_toStartOf="@id/OrganizerEntrantOnWaitingListSendNotificationButton"/>
    <Button
        android:id="@+id/OrganizerEntrantOnWaitingListSendNotificationButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
...
